2008-01-18  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added jhbuild module for doc translation.

2008-01-18  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Removed gnome-office since it has been moved to
	svn-archive.gnome.org.

2008-01-17  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added a new module: libepc
	* releases.xml.in: Added libepc to gnome-extras release set

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add SVN browse URL to GNUCash 2.2 branch.

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* data.py: Arghhh... syntax error in previous commit. Sorry!

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* data.py: Allow URL link in string without parsing it as an XML node.
	* gnome-modules.xml.in: Add GNUCash module.
	* releases.xml.in: gnome-build and gdl were listed twice.
	* templates/module.tmpl: Display the comment attribute when available.

2008-01-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: New gnome-settings-daemon module (splitted from
	gnome-control-center).

2008-01-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Use gimp-gap gap-2-4 branch.

2008-01-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module mousetweaks.

2008-01-14  Gil Forcada  <gforcada@gnome.org>

	* people.xml.in: Added a few faces.

2008-01-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Point to the right Bugzilla product for
	libgweather.
	http://mail.gnome.org/archives/gnome-i18n/2008-January/msg00126.html
	* releases.xml.in: ekiga will still deliver 2.20 branch for 2.22.
	http://mail.gnome.org/archives/gnome-i18n/2008-January/msg00123.html

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* templates/show-stats.tmpl: Compute more precisely the link to figure
	status, to prevent some problems with ending slash.
