@@ -1,3 +1,9 @@
+2008-01-18  Gil Forcada  <gforcada@gnome.org>
+
+	* update-stats.py:
+	* data.py:
+	only show errors in stderr if defaults.DEBUG is set to 1
+
 2008-01-18  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
